# dziennik-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  Procfile  Procfile.windows  README.md  app.json
docs/: dziennik_rust.postman_collection.json
migrations/2019-04-14-131453_create_users/: up.sql
migrations/2019-04-14-132616_create_students/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/login/: mod.rs
src/students/: mod.rs  models.rs
src/students/models/: create.rs  delete.rs  imports.rs  read.rs  update.rs
