[package]
name = "actix-web-getting-started"
version = "0.1.0"
authors = ["Jakub Koralewski <jakub.koralewski1@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
listenfd = "0.3"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde_derive = "1.0.90"
serde = "1.0"
serde_json = "1.0"
json = "*"
futures = "0.1.26"

[package.metadata.scripts]
dev = "systemfd --no-pid -s http::3000 -- cargo watch -x run"