[package]
name = "dziennik-rust"
version = "0.2.0"
authors = ["Jakub Koralewski <contact@jcubed.me>"]
edition = "2018"

[dependencies]
# Web framework
actix-web = "0.7"
serde_derive = "1.0.90"
serde = "1.0"
futures = "0.1.26"

# Auto reload
listenfd = "0.3"

# Database
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"

# Error logging
sentry = "0.15.2"
sentry-actix = "0.15.2"
log = "0.4.0"
pretty_env_logger = "0.3"
env_logger = "0.6.1"

[package.metadata.scripts]
dev = "systemfd --no-pid -s http::3000 -- cargo watch -x run"